--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./dist/index.js",
     "start-dev": "nodemon ./dist/index.js",
     "typescript": "tsc",
-    "typescript-watch": "tsc --watch"
+    "typescript-watch": "tsc --watch",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
