--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
   },
   "homepage": "https://github.com/syauqeesy/social-media#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3"
