--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/syauqeesy/social-media#readme",
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
