--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
